--- a/index.html
+++ b/index.html
@@ -10,122 +10,113 @@
 <body>
 <!-- partial:index.partial.html -->
 <div class='canvas'>
-  <div class="ball"></div>
+  <div id="ball"></div>
   <div class='ruler'>
-  <ul>
+    <div class="rulernumbers">
+    <p>0</p><br>
+    <p>1</p><br>
+    <p>2</p><br>
+    <p>3</p><br>
+    <p>4</p><br>
+    <p>5</p><br>
+    <p>6</p><br>
+    <p>7</p><br>
+    <p>8</p><br>
+    <p>9</p><br>
+    <p>10</p><br>
+    <p>11</p><br>
+    <p>12</p><br>
+    <p>13</p><br>
+    <p>14</p><br>
+    <p>15</p><br>
+    <p>16</p><br>
+    <p>17</p><br>
+    <p>18</p><br>
+    <p>19</p><br>
+    <p>20</p><br>
+    </div>
+  <ul class="rulermarks">
+    
     <li></li>
+    <li></li><li></li><li></li><li></li>
     <li></li>
+
     <li></li>
+    <li></li><li></li><li></li><li></li>
     <li></li>
+
     <li></li>
+    <li></li><li></li><li></li><li></li>
     <li></li>
+
     <li></li>
+    <li></li><li></li><li></li><li></li>
     <li></li>
+
     <li></li>
+    <li></li><li></li><li></li><li></li>
     <li></li>
+
     <li></li>
+    <li></li><li></li><li></li><li></li>
     <li></li>
+
     <li></li>
+    <li></li><li></li><li></li><li></li>
     <li></li>
+
     <li></li>
+    <li></li><li></li><li></li><li></li>
     <li></li>
+
     <li></li>
+    <li></li><li></li><li></li><li></li>
     <li></li>
+
     <li></li>
+    <li></li><li></li><li></li><li></li>
     <li></li>
+
     <li></li>
+    <li></li><li></li><li></li><li></li>
     <li></li>
+
     <li></li>
+    <li></li><li></li><li></li><li></li>
     <li></li>
+
     <li></li>
+    <li></li><li></li><li></li><li></li>
     <li></li>
+
     <li></li>
+    <li></li><li></li><li></li><li></li>
     <li></li>
+
     <li></li>
+    <li></li><li></li><li></li><li></li>
     <li></li>
+
     <li></li>
+    <li></li><li></li><li></li><li></li>
     <li></li>
+
     <li></li>
+    <li></li><li></li><li></li><li></li>
     <li></li>
+
     <li></li>
+    <li></li><li></li><li></li><li></li>
     <li></li>
+
     <li></li>
+    <li></li><li></li><li></li><li></li>
     <li></li>
+
     <li></li>
+    <li></li><li></li><li></li><li></li>
     <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
+
     <li></li>
   </ul>
 </div>
@@ -141,26 +132,26 @@
         <label>Velocity: <span id="velocity">0</span>m/s</label>
       </div>
       <div id="controls">
-        <a href="start">
+        <a href="javascript: test()" onclick="test">
           <span></span>
           <span></span>
           <span></span>
           <span></span>
-          Start
+          <?xml version="1.0" encoding="UTF-8"?><svg width="24px" height="24px" stroke-width="2" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" color="#ffffff"><path d="M6.906 4.537A.6.6 0 006 5.053v13.894a.6.6 0 00.906.516l11.723-6.947a.6.6 0 000-1.032L6.906 4.537z" stroke="#ffffff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path></svg>
         </a>
         <a href="pause_resume">
           <span></span>
           <span></span>
           <span></span>
           <span></span>
-          P/R
+          <?xml version="1.0" encoding="UTF-8"?><svg width="24px" height="24px" stroke-width="2" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" color="#ffffff"><path d="M6 18.4V5.6a.6.6 0 01.6-.6h2.8a.6.6 0 01.6.6v12.8a.6.6 0 01-.6.6H6.6a.6.6 0 01-.6-.6zM14 18.4V5.6a.6.6 0 01.6-.6h2.8a.6.6 0 01.6.6v12.8a.6.6 0 01-.6.6h-2.8a.6.6 0 01-.6-.6z" stroke="#ffffff" stroke-width="2"></path></svg>
         </a>
         <a href="restart">
           <span></span>
           <span></span>
           <span></span>
           <span></span>
-          Restart
+          <?xml version="1.0" encoding="UTF-8"?><svg width="24px" height="24px" stroke-width="2.5" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" color="#ffffff"><g clip-path="url(#restart_svg__clip0_1735_6488)" stroke="#ffffff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M6.677 20.567C2.531 18.021.758 12.758 2.717 8.144 4.875 3.06 10.745.688 15.829 2.846c5.084 2.158 7.456 8.029 5.298 13.113a9.954 9.954 0 01-3.962 4.608"></path><path d="M17 16v4.4a.6.6 0 00.6.6H22M12 22.01l.01-.011"></path></g><defs><clipPath id="restart_svg__clip0_1735_6488"><path fill="#fff" d="M0 0h24v24H0z"></path></clipPath></defs></svg>
         </a>
       </div>
     </form>
@@ -169,6 +160,6 @@
 </div>
 
 <!-- partial -->
-  
+  <script src="calculations.js"></script>
 </body>
 </html>
