--- a/index.html
+++ b/index.html
@@ -156,6 +156,11 @@
       </div>
     </form>
   </div>
+
+  <div class="info-box modified-info-box">
+    <h2>Free Fall</h2>
+    <p>Motion of an object under gravity where no external force acts on it is known as free fall.</p>
+  </div>
   <!-- <div class="sailor"></div> -->
 </div>
 
